# auth-service

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  log-config.yml
auth-service-web/static/css/: login.css  oauth2.css
auth-service-web/static/js/: login.js  oauth2.js
auth-service-web/templates/: login.html.hbs  oauth2.html.hbs
liquibase/: changelog.xml  liquibase.properties
migrations/2020-11-05-180556_create_users/: up.sql
src/: base_model.rs  config.rs  controller.rs  database.rs  main.rs  schema.rs
src/auth/: crypto.rs  db_utils.rs  http_basic_auth.rs  mod.rs  redis_utils.rs  token_utils.rs  utils.rs
src/auth/token/: mod.rs  utils.rs
src/controller/: mod.rs  outcome.rs
src/oauth/: apps.rs  credentials.rs  dto.rs  mod.rs  model.rs
src/users/: crypto.rs  dto.rs  mod.rs  model.rs
src/web/: mod.rs
