[package]
name = "auth_service"
version = "0.1.0"
authors = ["rippetanks <simone.martelli.98@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.7"
serde = { version = "1.0.123", features = ["derive"] }
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }
jsonwebtoken = "7.2.0"
log4rs = "1.0.0"
log = "0.4.14"
rand_core = "0.6.2"
scrypt = "0.6.3"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "diesel_postgres_pool", "handlebars_templates", "tera_templates"]
