[package]
name = "auth_service"
version = "0.2.0"
authors = ["rippetanks <simone.martelli.98@gmail.com>"]
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
log4rs = "1.0.0"
log = "0.4.14"

#[dependencies.rocket_db_pools]
#version = "0.1.0-rc.2"
#features = ["deadpool_postgres"]
